--- a/index.html
+++ b/index.html
@@ -71,9 +71,26 @@
       color: #ccc;
       margin-top: 5px;
     }
+
+    /* Date-Time display */
+    .date-time {
+      position: fixed;
+      top: 10px;
+      right: 15px;
+      font-size: 0.8rem;
+      color: #eee;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 5px 10px;
+      border-radius: 10px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      z-index: 1000;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+    }
   </style>
 </head>
 <body>
+  <div id="dateTime" class="date-time"></div>
+
   <h1 class="title" id="mainTitle">Life Left in 2025...</h1>
   <div class="month-grid" id="monthGrid"></div>
 
@@ -221,6 +238,25 @@
 
     createBoxes();
     animate();
+
+    // Live date-time updater
+    function updateDateTimeDisplay() {
+      const now = new Date();
+      const options = {
+        weekday: 'short',
+        year: 'numeric',
+        month: 'short',
+        day: 'numeric',
+        hour: '2-digit',
+        minute: '2-digit',
+        second: '2-digit',
+        hour12: true
+      };
+      document.getElementById('dateTime').textContent = now.toLocaleString('en-US', options);
+    }
+
+    setInterval(updateDateTimeDisplay, 1000);
+    updateDateTimeDisplay();
   </script>
 </body>
 </html>
