--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
       margin-top: 5px;
     }
 
-    /* Date-Time display */
     .date-time {
       position: fixed;
       top: 10px;
@@ -137,6 +136,7 @@
 
     function createBoxes() {
       monthGrid.innerHTML = "";
+      boxes.length = 0;
       for (let i = 0; i < totalBoxes; i++) {
         const box = document.createElement("div");
         box.className = "month";
@@ -145,32 +145,34 @@
       }
     }
 
-    function getWeekIndex(date) {
-      const startOfYear = new Date(date.getFullYear(), 0, 1);
-      const endOfYear = new Date(date.getFullYear(), 11, 31, 23, 59, 59, 999);
-      const totalMs = endOfYear - startOfYear;
-      const elapsedMs = date - startOfYear;
-      return Math.floor((elapsedMs / totalMs) * totalBoxes);
+    function getWeekNumber(d) {
+      const date = new Date(Date.UTC(d.getFullYear(), d.getMonth(), d.getDate()));
+      const startOfYear = new Date(Date.UTC(d.getFullYear(), 0, 1));
+      const dayOfYear = Math.floor((date - startOfYear) / (1000 * 60 * 60 * 24));
+      return Math.floor(dayOfYear / 7) + 1; // +1 so Jan 1–7 is week 1
     }
 
     function updateBoxes() {
       const now = new Date();
-      const startOfYear = new Date(now.getFullYear(), 0, 1);
-      const endOfYear = new Date(now.getFullYear(), 11, 31, 23, 59, 59, 999);
-      const totalMs = endOfYear - startOfYear;
-      const currentWeek = getWeekIndex(now);
+      const currentWeek = getWeekNumber(now);
+      const maxWeek = totalBoxes;
 
       for (let i = 0; i < totalBoxes; i++) {
         const box = boxes[i];
         box.className = "month";
         while (box.firstChild) box.removeChild(box.firstChild);
 
-        if (i < currentWeek) {
+        if (i < currentWeek - 1) {
           box.classList.add("past");
-        } else if (i === currentWeek) {
-          const boxStart = startOfYear.getTime() + (i / totalBoxes) * totalMs;
-          const boxEnd = startOfYear.getTime() + ((i + 1) / totalBoxes) * totalMs;
-          const percentPassed = Math.min(100, ((now - boxStart) / (boxEnd - boxStart)) * 100);
+        } else if (i === currentWeek - 1) {
+          // Highlight current week with partial fill
+          const dayOfWeek = now.getDay(); // 0 (Sun) to 6 (Sat)
+          const hour = now.getHours();
+          const minute = now.getMinutes();
+          const second = now.getSeconds();
+          const ms = now.getMilliseconds();
+
+          const percentPassed = ((dayOfWeek * 24 * 60 * 60 * 1000 + hour * 3600000 + minute * 60000 + second * 1000 + ms) / (7 * 24 * 60 * 60 * 1000)) * 100;
 
           const left = document.createElement("div");
           left.style.position = "absolute";
@@ -239,7 +241,6 @@
     createBoxes();
     animate();
 
-    // Live date-time updater
     function updateDateTimeDisplay() {
       const now = new Date();
       const options = {
